shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/OsmBadUserInputException.kt
package com.example.osmapi.core.common.errors

open class OsmBadUserInputException: OsmApiException() {
}